Swagger: improve @OA informations
