# storage/api-docs/api-docs.json
@@ -13,38 +13,45 @@
         "/v1/tasks": {
             "get": {
                 "tags": [
-                    "/v1/tasks"
+                    "Tasks"
                 ],
                 "summary": "Buscar todas as tarefas",
-                "description": "Este endpoint é resposnsável por retornar todas as tarefas cadastradas. Não requer nenhum parametro.",
+                "description": "Retorna todas as tarefas cadastradas.",
                 "operationId": "cef450ac078bbbd790a9b74cad86791a",
                 "responses": {
                     "200": {
-                        "description": "Retorno da lista"
+                        "description": "Lista de tarefas retornada com sucesso."
                     }
                 }
             },
             "post": {
                 "tags": [
-                    "/v1/tasks"
+                    "Tasks"
                 ],
                 "summary": "Cadastrar nova tarefa",
-                "description": "Este endpoint é resposnsável por criar uma nova tarefa",
+                "description": "Cria uma nova tarefa.",
                 "operationId": "970a65037b4a2dfd6481ba305e8f606b",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
+                                "required": [
+                                    "title",
+                                    "user_id"
+                                ],
                                 "properties": {
                                     "title": {
-                                        "type": "string"
+                                        "type": "string",
+                                        "example": "Tarefa 1"
                                     },
                                     "description": {
-                                        "type": "string"
+                                        "type": "string",
+                                        "example": "Descrição a tarefa"
                                     },
                                     "user_id": {
-                                        "type": "integer"
+                                        "type": "integer",
+                                        "example": 1
                                     }
                                 },
                                 "type": "object"
@@ -54,7 +61,10 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Cadastrado com sucesso"
+                        "description": "Tarefa criada com sucesso."
+                    },
+                    "422": {
+                        "description": "Erro de validação."
                     }
                 }
             }
@@ -62,8 +72,8 @@
     },
     "tags": [
         {
-            "name": "/v1/tasks",
-            "description": "/v1/tasks"
+            "name": "Tasks",
+            "description": "Tasks"
         }
     ]
 }
